--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ border: 2px solid black;
 padding: 10px;
 height: 500px;
 background: beige;
-background-image: url("https://static1.squarespace.com/static/5611b3fae4b09e1a44f2d387/59c81372b1ffb6eac171cb2b/59c823858419c269b82806ef/1506288519951/Museum+of+Ice+Cream-9.jpg"); /* put your own pic here */
+background-image: url("https://78.media.tumblr.com/b9af4c0ee9214657b3f06804e7c97a8d/tumblr_ogjkdtSsU41sy2cjqo1_1280.png"); /* put your own pic here */
 color: white;
 }
 
