--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ border: 2px solid black;
 padding: 10px;
 height: 500px;
 background: beige;
-background-image: url("https://78.media.tumblr.com/b9af4c0ee9214657b3f06804e7c97a8d/tumblr_ogjkdtSsU41sy2cjqo1_1280.png"); /* put your own pic here */
+background-image: url("https://i.pinimg.com/originals/87/7f/f1/877ff1724bf32dce1b3b7f3631604bd5.jpg"); /* put your own pic here */
 color: white;
 }
 
