--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ border: 2px solid black;
 padding: 10px;
 height: 500px;
 background: beige;
-background-image: url("https://78.media.tumblr.com/af58d11a3e763f7024cd24019e95e8bd/tumblr_o8k4me9fud1vtgm68o1_1280.png"); /* put your own pic here */
+background-image: url("https://i.pinimg.com/originals/bb/d2/c3/bbd2c33aab1d827674b2067d91c9031b.jpg"); /* put your own pic here */
 color: white;
 }
 
