--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ border: 2px solid black;
 padding: 10px;
 height: 500px;
 background: beige;
-background-image: url("https://images-na.ssl-images-amazon.com/images/I/41wxdVRD-VL.jpg"); /* put your own pic here */
+background-image: url("https://hoodwork-production.s3.amazonaws.com/uploads/story/image/39892/MOIC_April_21st-1159.jpg"); /* put your own pic here */
 color: white;
 }
 
