--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ border: 2px solid black;
 padding: 10px;
 height: 500px;
 background: beige;
-background-image: url("https://hoodwork-production.s3.amazonaws.com/uploads/story/image/39892/MOIC_April_21st-1159.jpg"); /* put your own pic here */
+background-image: url("https://78.media.tumblr.com/3e7eacc994055824f605aaf3df62f394/tumblr_n6wq64fgH21twwx2ho1_1280.jpg"); /* put your own pic here */
 color: white;
 }
 
