--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-background-color: #f7cfec;
+background-color: #e6d0ef;
 font-family: Helvetica;
 }
 
@@ -23,7 +23,7 @@ border: 2px solid black;
 padding: 10px;
 height: 500px;
 background: beige;
-background-image: url("https://78.media.tumblr.com/3e7eacc994055824f605aaf3df62f394/tumblr_n6wq64fgH21twwx2ho1_1280.jpg"); /* put your own pic here */
+background-image: url("https://i.pinimg.com/originals/10/07/62/1007629c14532ace7dbf8d9211195563.jpg"); /* put your own pic here */
 color: white;
 }
 
